explicitly show functions

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
     "framework": null,
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "installCommand": "npm install && cd frontend && npm install"
+    "installCommand": "npm install && cd frontend && npm install",
+    "functions": {
+        "api/**/*.ts": {
+            "runtime": "@vercel/node@3"
+        }
+    }
 }
