--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "framework": null,
+    "version": 2,
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "installCommand": "npm install && cd frontend && npm install",
