Try to clean out vercel.json again

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,18 @@
 {
     "version": 2,
     "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/dist",
     "installCommand": "npm install && cd frontend && npm install",
-    "functions": {
-        "api/*.ts": {
-            "runtime": "@vercel/node@3"
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
         },
+        {
+            "source": "/(.*)",
+            "destination": "/frontend/dist/$1"
+        }
+    ],
+    "functions": {
         "api/**/*.ts": {
             "runtime": "@vercel/node@3"
         }
