--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,11 @@
     "version": 2,
     "buildCommand": "cd frontend && npm install && npm run build",
     "installCommand": "npm install && cd frontend && npm install",
+    "outputDirectory": "frontend/dist",
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/$1"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/frontend/dist/$1"
+            "source": "/((?!api/).*)",
+            "destination": "/index.html"
         }
-    ],
-    "functions": {
-        "api/**/*.ts": {
-            "runtime": "@vercel/node@3.0.0"
-        }
-    }
+    ]
 }
