generate prisma on deployment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
