--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
     "version": 2,
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "installCommand": "npm install && cd frontend && npm install",
+    "buildCommand": "npm install && cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "rewrites": [
         {
-            "source": "/((?!api/).*)",
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
+        },
+        {
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
